docs/api/qiskit/0.19/qiskit.circuit.library.Barrier.mdx
---
title: Barrier (v0.19)
description: API reference for qiskit.circuit.library.Barrier in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.Barrier
---

# Barrier

<Class id="qiskit.circuit.library.Barrier" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/barrier.py" signature="Barrier(num_qubits)" modifiers="class">
  Barrier instruction.

  Create new barrier instruction.

  ## Attributes

  <span id="barrier-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.Barrier.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="barrier-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.Barrier.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="barrier-params" />

  ### params

  <Attribute id="qiskit.circuit.library.Barrier.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="barrier-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.Barrier.add_decomposition" signature="Barrier.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="barrier-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.Barrier.assemble" signature="Barrier.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="barrier-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.Barrier.broadcast_arguments" signature="Barrier.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="barrier-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.Barrier.c_if" signature="Barrier.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="barrier-copy" />

  ### copy

  <Function id="qiskit.circuit.library.Barrier.copy" signature="Barrier.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="barrier-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.Barrier.inverse" signature="Barrier.inverse()">
    Special case. Return self.
  </Function>

  <span id="barrier-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.Barrier.is_parameterized" signature="Barrier.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="barrier-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.Barrier.mirror" signature="Barrier.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="barrier-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.Barrier.qasm" signature="Barrier.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="barrier-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.Barrier.repeat" signature="Barrier.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

